<resources>
    <string name="app_name">Canasta</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_game_label">New Game</string>
    <string name="load_game_label">Load Game</string>

    <string name="coin_toss_prompt">Player 2! Heads or Tails?</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="coin_toss_result">The result of the coin toss was:</string>

    <string name="coin_toss_success">You guessed correctly! Player 2 goes first!</string>
    <string name="coin_toss_failure">You guessed incorrectly... Player 1 goes first!</string>
    <string name="start_game">Start</string>


    <string name="opponent_turn"> It\'s currently the opponent\'s turn. Tap to continue!</string>
    <string name="your_turn"> It\'s currently your turn. Tap to continue!</string>

    <string name="meld_label">Meld cards</string>
    <string name="add_meld_label">Add to pre-existing meld</string>
    <string name="transfer_meld_label">Transfer wildcard from meld</string>
    <string name="end_meld_phase"> End Phase </string>
    <string name= "cancel_operation"> Cancel Operation</string>

    <string name="advice"> Advice </string>
    <string name ="Round"> Round: </string>
    <string name="stock_pile"> Stock pile </string>
    <string name="discard_pile"> Discard pile</string>
    <string name="player_hand"> Your hand </string>
    <string name="player_melds"> Your melds </string>
    <string name="enemy_melds"> Enemy\'s melds </string>
    <string name="enemy_hand"> Enemy\'s hand </string>
    <string name="log"> Log </string>
    <string name="save_game"> Save </string>
    <string name="continue_turn"> Continue </string>
    <string name="score"> Score: </string>
    <string name="quit"> Quit </string>

    <string name ="create_meld"> Create Meld</string>
    <string name= "add_meld"> Add to Meld</string>
    <string name = "transfer_wild_cards">Transfer Cards</string>
    <string name= "file_load_fail"> File failed to load, file doesn\'t exist!</string>


    <string name= "input_file_prompt"> Input a file: </string>
    <string name= "load_file_button"> Load file </string>
    <string name= "cancel_load_button"> Cancel Loading </string>









    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>